monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4025/A4025_sub_e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4025;

grammar A4025_sub_e extends de.monticore.grammar.cocos.invalid.A4025.A4025_super_e {

 B;

 A = c:B;

}
